err/metalcloud-api-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/fullmetal_api_client'...
Listing './lib/python3.5/site-packages/fullmetal_api_client/clients'...
Listing './lib/python3.5/site-packages/fullmetal_api_client/objects'...
Listing './lib/python3.5/site-packages/fullmetal_api_client/objects/utils'...
Listing './lib/python3.5/site-packages/jsonrpc2_base'...
Compiling './lib/python3.5/site-packages/jsonrpc2_base/client.py'...
***   File "./lib/python3.5/site-packages/jsonrpc2_base/client.py", line 109
    except Exception, objError:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonrpc2_base/endpoint'...
Compiling './lib/python3.5/site-packages/jsonrpc2_base/endpoint/router.py'...
***   File "./lib/python3.5/site-packages/jsonrpc2_base/endpoint/router.py", line 57
    print "Page not found. Unknown JSON-RPC endpoint URL: " + strRequestURI
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jsonrpc2_base/plugins'...
Listing './lib/python3.5/site-packages/jsonrpc2_base/plugins/client'...
Compiling './lib/python3.5/site-packages/jsonrpc2_base/plugins/client/debug_logger.py'...
***   File "./lib/python3.5/site-packages/jsonrpc2_base/plugins/client/debug_logger.py", line 40
    print strOutput
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jsonrpc2_base/plugins/server'...
Listing './lib/python3.5/site-packages/jsonrpc2_base-0.7.egg-info'...
Listing './lib/python3.5/site-packages/metalcloud_api_client-2.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
